# daily_devotional

./: .gitignore  bible_verse.py  clean_markdown.py  daily_devotional.db  daily_devotional.db.backup  database.py  db_bible.py  download.py  fixed.sh  fixed_messages.txt  generate_ai_content.py  holiday.py  load_fixed.py  load_original_content.py  main.py  missing_from_sqlite.ids  models.py  post_devotional.py  post_devotional.py.delete  post_devotional_v2.py  pull_message_batch.py  pyproject.toml  sqlite_message_ids.txt  telegram.notes  telegram_poster.py
alembic/: env.py
archive/: check_spelling.py  clean_markdown.py  complete_pastor_al.ids  count_mail.py  download_unidentified.py  dump_final_parens.py  fix_verse_line_endings.py  generate_reading.py  interactive_replace_ps.py  load_original_content.py  normalize_and_update_reading.py  normalize_refs.py  pull_sqlite_ids.py  update_verses.py
db_backup/: backup_cmd.sh  bible_verse.db.orig  bible_verse_20251107.sqlite  daily_devotional_20251107.sqlite
fixed/: 16c647ee30bbb1a5.txt.loaded  16c739d6eeb89153.txt.loaded  16c78ee1f1eca5be.txt.loaded  16c7dddf9eb2df30.txt.loaded  16c832fed7f4b537.txt.loaded  16c8d8fdaf6bbf74.txt.loaded  16c92cab58b391c1.txt.loaded  16c9832fdc2e7e0d.txt.loaded  16c9cd8600198f26.txt.loaded  16ca799b0d020d6c.txt.loaded  16cbbf1be9201f49.txt.loaded  16cc35ff35b6ce49.txt.loaded  16cc65061266b20e.txt.loaded  16ccb696275d6aac.txt.loaded  16cd0a4303c3f5fa.txt.loaded  16cd5e37f7848f7c.txt.loaded  16ce01b63c12eede.txt.loaded  16cef6ebb9806e14.txt.loaded  16cf9a273e996c47.txt.loaded  (+70 more)
scripts/: run.notes  (+10 more)
(+6432 files in other folders)
