[project]
name = "daily-devotional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "fuzzywuzzy>=0.18.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "psycopg>=3.3.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
